--- a/vue/Main-Page.html
+++ b/vue/Main-Page.html
@@ -24,15 +24,15 @@
 					<div class="container">
 						<div class="col">
 							<img src="Pictures/Sign.png">
-							<h2>Sign In</h2>
-							<p>Sign into your account, to view your books.</p>
-							<a class="btn-default" href="http://127.0.0.1:7000/login">Sign In</a>
+							<h2>Login In</h2>
+							<p>login into your account, to view your books.</p>
+							<a class="btn-default" href="http://127.0.0.1:7000/login">Login In</a>
 						</div>
 						<div class="col">
 							<img src="Pictures/Search.png">
-							<h2>Search For Books</h2>
-							<p>Search for the books you like right now.</p>
-							<a class="btn-default" href="http://127.0.0.1:7000/login">Search</a>
+							<h2>Guest </h2>
+							<p>Search for the books you like right now without login.</p>
+							<a class="btn-default" href="http://127.0.0.1:7000/gist">Guest</a>
 						</div>
 						<div class="col">
 							<img src="Pictures/Register.png">
