--- a/vue/catogeryinfo.html
+++ b/vue/catogeryinfo.html
@@ -2,24 +2,24 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/tailwindcss.css" />
-    <title>Book</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/tailwindcss.css" />
+  <title>Book</title>
 </head>
 
-<body class="bg-gray-200 font-sans overflow-auto" >
-     <!-- Nav-bar -->
-   <!-- Nav-bar -->
-   <nav class="bg-green-600 block w-screen flex items-center justify-between flex-grow space-x-10 px-4 py-5 lg:p-5">
+<body class="bg-gray-200 font-sans overflow-auto">
+  <!-- Nav-bar -->
+  <!-- Nav-bar -->
+  <nav class="bg-green-600 block w-screen flex items-center justify-between flex-grow space-x-10 px-4 py-5 lg:p-5">
     <!-- Dorp -->
     <div class="relative">
       <div>
-      <a href="http://127.0.0.1:7000/catogery">  <button id="menu-dwn"
-          class="flex items-center space-x-2 lg:space-x-5 text-xl lg:text-3xl text-gray-100 lg:p-5 block hover:bg-green-700 duration-300">
-          Category
-        </button> </a>
+        <a href="http://127.0.0.1:7000/catogery"> <button id="menu-dwn"
+            class="flex items-center space-x-2 lg:space-x-5 text-xl lg:text-3xl text-gray-100 lg:p-5 block hover:bg-green-700 duration-300">
+            Category
+          </button> </a>
       </div>
     </div>
     <!-- home -->
@@ -50,15 +50,16 @@
           <input type="text" class="h-14 w-96 pl-10 pr-20 rounded-lg z-0 focus:shadow focus:outline-none"
             placeholder="Search anything..." id="search">
           <div class="absolute top-2 right-2"> <button
-              class="h-10 w-20 text-white rounded-lg bg-green-600 hover:bg-green-200"  onclick="ser()">Search</button> </div>
+              class="h-10 w-20 text-white rounded-lg bg-green-600 hover:bg-green-200" onclick="ser()">Search</button>
+          </div>
         </div>
       </div>
     </div>
   </nav>
-    <h1 id="title" class="text-center text-2xl "></h1>
-    <!-- body -->
-    <div class=" space-y-2  p-2 lg:p-10 " id="catogerybook">
-        <!-- Card -->
+  <h1 id="title" class="text-center text-2xl "></h1>
+  <!-- body -->
+  <div class=" space-y-2  p-2 lg:p-10 " id="catogerybook">
+    <!-- Card -->
 
 
 
@@ -66,80 +67,138 @@
 
 
 
-        <!-- Body-end -->
-    </div>
+    <!-- Body-end -->
+  </div>
 
 
 
 
 
-    <script>
-       var docCookies = {
-				getItem: function (sKey) {
-					return decodeURIComponent(document.cookie.replace(new RegExp("(?:(?:^|.*;)\\s*" + encodeURIComponent(sKey).replace(/[\-\.\+\*]/g, "\\$&") + "\\s*\\=\\s*([^;]*).*$)|^.*$"), "$1")) || null;
-				},
-				setItem: function (sKey, sValue, vEnd, sPath, sDomain, bSecure) {
-					if (!sKey || /^(?:expires|max\-age|path|domain|secure)$/i.test(sKey)) { return false; }
-					var sExpires = "";
-					if (vEnd) {
-						switch (vEnd.constructor) {
-							case Number:
-								sExpires = vEnd === Infinity ? "; expires=Fri, 31 Dec 9999 23:59:59 GMT" : "; max-age=" + vEnd;
-								break;
-							case String:
-								sExpires = "; expires=" + vEnd;
-								break;
-							case Date:
-								sExpires = "; expires=" + vEnd.toUTCString();
-								break;
-						}
-					}
-					document.cookie = encodeURIComponent(sKey) + "=" + encodeURIComponent(sValue) + sExpires + (sDomain ? "; domain=" + sDomain : "") + (sPath ? "; path=" + sPath : "") + (bSecure ? "; secure" : "");
-					return true;
-				},
-				removeItem: function (sKey, sPath, sDomain) {
-					if (!sKey || !this.hasItem(sKey)) { return false; }
-					document.cookie = encodeURIComponent(sKey) + "=; expires=Thu, 01 Jan 1970 00:00:00 GMT" + (sDomain ? "; domain=" + sDomain : "") + (sPath ? "; path=" + sPath : "");
-					return true;
-				},
-				hasItem: function (sKey) {
-					return (new RegExp("(?:^|;\\s*)" + encodeURIComponent(sKey).replace(/[\-\.\+\*]/g, "\\$&") + "\\s*\\=")).test(document.cookie);
-				},
-				keys: /* optional method: you can safely remove it! */ function () {
-					var aKeys = document.cookie.replace(/((?:^|\s*;)[^\=]+)(?=;|$)|^\s*|\s*(?:\=[^;]*)?(?:\1|$)/g, "").split(/\s*(?:\=[^;]*)?;\s*/);
-					for (var nIdx = 0; nIdx < aKeys.length; nIdx++) { aKeys[nIdx] = decodeURIComponent(aKeys[nIdx]); }
-					return aKeys;
-				}
-			};
+  <script>
+    var docCookies = {
+      getItem: function (sKey) {
+        return decodeURIComponent(document.cookie.replace(new RegExp("(?:(?:^|.*;)\\s*" + encodeURIComponent(sKey).replace(/[\-\.\+\*]/g, "\\$&") + "\\s*\\=\\s*([^;]*).*$)|^.*$"), "$1")) || null;
+      },
+      setItem: function (sKey, sValue, vEnd, sPath, sDomain, bSecure) {
+        if (!sKey || /^(?:expires|max\-age|path|domain|secure)$/i.test(sKey)) { return false; }
+        var sExpires = "";
+        if (vEnd) {
+          switch (vEnd.constructor) {
+            case Number:
+              sExpires = vEnd === Infinity ? "; expires=Fri, 31 Dec 9999 23:59:59 GMT" : "; max-age=" + vEnd;
+              break;
+            case String:
+              sExpires = "; expires=" + vEnd;
+              break;
+            case Date:
+              sExpires = "; expires=" + vEnd.toUTCString();
+              break;
+          }
+        }
+        document.cookie = encodeURIComponent(sKey) + "=" + encodeURIComponent(sValue) + sExpires + (sDomain ? "; domain=" + sDomain : "") + (sPath ? "; path=" + sPath : "") + (bSecure ? "; secure" : "");
+        return true;
+      },
+      removeItem: function (sKey, sPath, sDomain) {
+        if (!sKey || !this.hasItem(sKey)) { return false; }
+        document.cookie = encodeURIComponent(sKey) + "=; expires=Thu, 01 Jan 1970 00:00:00 GMT" + (sDomain ? "; domain=" + sDomain : "") + (sPath ? "; path=" + sPath : "");
+        return true;
+      },
+      hasItem: function (sKey) {
+        return (new RegExp("(?:^|;\\s*)" + encodeURIComponent(sKey).replace(/[\-\.\+\*]/g, "\\$&") + "\\s*\\=")).test(document.cookie);
+      },
+      keys: /* optional method: you can safely remove it! */ function () {
+        var aKeys = document.cookie.replace(/((?:^|\s*;)[^\=]+)(?=;|$)|^\s*|\s*(?:\=[^;]*)?(?:\1|$)/g, "").split(/\s*(?:\=[^;]*)?;\s*/);
+        for (var nIdx = 0; nIdx < aKeys.length; nIdx++) { aKeys[nIdx] = decodeURIComponent(aKeys[nIdx]); }
+        return aKeys;
+      }
+    };
+    function parseJwt(token) {
+      var base64Url = token.split('.')[1];
+      var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+      var jsonPayload = decodeURIComponent(atob(base64).split('').map(function (c) {
+        return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+      }).join(''));
+
+      return JSON.parse(jsonPayload);
+    };
+    var user_id = parseJwt(docCookies.getItem("tooken"))
+    user = user_id.name
+    console.log(user)
+
+    const queryString = window.location.search;
+    console.log(queryString);
+    const urlParams = new URLSearchParams(queryString);
+    const currentTarget = urlParams.get('myVar1');
+    console.log(currentTarget)
+    let title = document.getElementById("title");
+    let div2 = document.getElementById("catogerybook");
+
+    var name2 = []
+    fetch('http://127.0.0.1:7000/getdelvery')
+      .then(response => response.json())
+      .then((post) => {
+
+        for (let i = 0; i < post.resrvation.length; i++) {
+          console.log(post.resrvation[i].book_name)
+          name2.push(post.resrvation[i])
+        }
+      })
+
+    var name1 = []
+
+    var bookReservationarry = []
+    fetch(`http://127.0.0.1:7000/catogall/${currentTarget}`)
+      .then(response => response.json())
+      .then((post) => {
+        console.log(post)
+        for (let i = 0; i < post.resrvation.length; i++) {
+          console.log(post.resrvation[i].book_name)
+          bookReservationarry.push(post.resrvation[i].book_name)
+          name1.push(post.resrvation[i])
+
+        }
+        console.log(bookReservationarry)
+        for (let i = 0; i < post.category.length; i++) {
+          console.log(post.category[i])
+          var take = ""
+          console.log(post.category[i].book_name)
+          console.log(bookReservationarry[i])
+          if (bookReservationarry.includes(post.category[i].book_name)) {
+            take = "the book is takine"
+          }
+          var null1 = "";
+          var null2 = "";
+          var null3 = "";
+          if (take != "") {
+            null1 = "none"
+            null2 = "none"
+            null3 = "none"
+          }
+
+          else {
+            null1 = "block"
+            null2 = "none"
+            null3 = "none"
+
+          }
+          for (let j = 0; j < name1.length; j++) {
+            if (post.category[i].book_name == name1[j].book_name && user == name1[j].user_name) {
+              null2 = "block"
+            }
+          }
+console.log(name2)
+          for (let j = 0; j < name2.length; j++) {
+            if (post.category[i].book_name == name2[j].book_name && user == name2[j].user_name) {
+              null3 = "block"
+              null1 = "none"
+
+            }
+          }
 
 
-        const queryString = window.location.search;
-        console.log(queryString);
-        const urlParams = new URLSearchParams(queryString);
-        const currentTarget = urlParams.get('myVar1');
-        console.log(currentTarget)
-        let title =  document.getElementById("title");
-        let div2 = document.getElementById("catogerybook");
-        var bookReservationarry = []
-        fetch(`http://127.0.0.1:7000/catogall/${currentTarget}`)
-            .then(response => response.json())
-            .then((post) => {
-                console.log(post)
-                    for (let i = 0; i < post.resrvation.length; i++) {
-                    console.log(post.resrvation[i].book_name)
-                    bookReservationarry.push(post.resrvation[i].book_name)
-                    }
-                    console.log(bookReservationarry)
-                    for (let i = 0; i < post.category.length; i++) {
-                      console.log(post.category[i])
-                      var take =""
-                      console.log(post.category[i].book_name)
-                      console.log(bookReservationarry[i])
-                if (  bookReservationarry.includes(post.category[i].book_name)) {
-                         take= "the book is takine"
-                    }
-                    title.innerHTML = `${post.category[i].category_name}`
-                        div2.innerHTML += `
+
+          title.innerHTML = `${post.category[i].category_name}`
+          div2.innerHTML += `
                   <div>
                   <div class="bg-gray-300 flex">
                     <img src='${post.category[i].book_image}' class="w-40 h-40 lg:w-2/12 h-auto" alt="book-cover" />
@@ -151,41 +210,64 @@
                       <p class="hidden lg:flex lg:px-5 py-3 lg:text-2xl">
                       ${post.category[i].book_description}
                       </p>
-                      <button
-                        class="bg-green-600 lg:text-3xl px-9 py-2 lg:px-7 lg:py-5 lg:pb-5 ml-5 hover:bg-green-500 duration-200 text-white">
-                     <a href = "http://127.0.0.1:7000/bookdetale?myVar1=${post.category[i].book_id}" >  Reed More <a>
-                      </button>
+                      <div id="hide" style="display: ${null1} ;">
+      <button
+        class="bg-green-600 lg:text-3xl px-9 py-2 lg:px-7 lg:py-5 lg:pb-5 ml-5 hover:bg-green-500 duration-200 text-white">
+     <a href = "http://127.0.0.1:7000/bookdetale?myVar1=${post.category[i].book_id}" >  Reed More <a>
+      </button>
+      </div>
+      <div id="hide" style="display: ${null2} ;">
+      <button
+        class="bg-green-600 lg:text-3xl px-9 py-2 lg:px-7 lg:py-5 lg:pb-5 ml-5 hover:bg-green-500 duration-200 text-white" id = "${post.category[i].book_id}" onclick="check(event)">
+     <a href = "http://127.0.0.1:7000/catogery" >  delet resrvation <a>
+      </button>
+      </div>
+      <div id="hide" style="display: ${null3} ;">
+      <button
+        class="bg-green-600 lg:text-3xl px-9 py-2 lg:px-7 lg:py-5 lg:pb-5 ml-5 hover:bg-green-500 duration-200 text-white" id = "${post.category[i].book_id}" onclick="check1(event)">
+     <a href = "http://127.0.0.1:7000/catogery" >  delet delevery <a>
+      </button>
+      </div>
                       <p> ${take} </p>
                       </div>
                   </div>
                 </div>
                       `
-                    }
-            });
-            function ser(){
-  var values1 =  document.getElementById("search").value
-   console.log(values1)
-   window.location.replace(`http://127.0.0.1:7000/searche?myVar1=${values1}`);
-
-}
+        }
+      });
 
 
 
 
 
 
-function ser(){
-  var values1 =  document.getElementById("search").value
-   console.log(values1)
-   window.location.replace(`http://127.0.0.1:7000/searche?myVar1=${values1}`);
+    function ser() {
+      var values1 = document.getElementById("search").value
+      console.log(values1)
+      window.location.replace(`http://127.0.0.1:7000/searche?myVar1=${values1}`);
 
-}
-function deletjwt() {
-			docCookies.removeItem("tooken")
-			window.location.replace("http://127.0.0.1:7000/");
+    }
 
-		}
-    </script>
+    function check(e) {
+      const currentTarget = e.currentTarget.id
+      console.log(currentTarget)
+      fetch(`http://127.0.0.1:7000/deletresvation/${currentTarget}`)
+      console.log(options);
+
+    }
+    function check1(e) {
+      const currentTarget = e.currentTarget.id
+      console.log(currentTarget)
+      fetch(`http://127.0.0.1:7000/deletdelvery/${currentTarget}`)
+      console.log(options);
+
+    }
+    function deletjwt() {
+      docCookies.removeItem("tooken")
+      window.location.replace("http://127.0.0.1:7000/");
+
+    }
+  </script>
 </body>
 
 </html>
